fixed links, the alignement of user Icon, add help and support link

--- a/src/App.css
+++ b/src/App.css
@@ -123,8 +123,8 @@ body {
 }
 
 .sidebarContent > ul > li > img {
-  width: 21px;
-  height: 17px;
+  width: 19px;
+  height: 23px;
   margin-bottom: 7px;
   margin-right: 10px;
 
@@ -155,6 +155,13 @@ body {
   word-spacing: 5px;
   color: #000000;
   display: inline-block;
+}
+
+.headerRightP {
+
+  margin-top: 4px;
+  margin-bottom: 1rem;
+
 }
 
 .notification {
